[project]
name = "modellhorizont"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "gradio>=5.0.0",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "pillow>=12.2.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
]
